--- a/index.html
+++ b/index.html
@@ -1,20 +1,42 @@
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:300&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+
+<script src="https://unpkg.com/markdown-it/dist/markdown-it.min.js"></script>
+<script src="https://unpkg.com/markdown-it-mathjax/dist/markdown-it-mathjax.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/3.2.0/es5/tex-mml-chtml.js" id="MathJax-script" async></script>
+
+
 <script src="http://www.google.com/jsapi" type="text/javascript"></script> 
 <script type="text/javascript">google.load("jquery", "1.3.2");</script>
 
 <style type="text/css">
-	body {
-		font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
-		font-weight:300;
-		font-size:18px;
-		margin-left: auto;
-		margin-right: auto;
-		width: 1100px;
-	}
-	
-	h1 {
-		font-size:32px;
-		font-weight:300;
-	}
+    body {
+        font-family: "Open Sans", sans-serif;
+        font-weight: 300;
+        font-size: 18px;
+        margin-left: auto;
+        margin-right: auto;
+        width: 1100px;
+    }
+
+    .handwritten {
+      font-family: 'Indie Flower', cursive;
+      font-weight: 200;
+    }
+
+    h1 {
+      font-family: 'Open Sans', sans-serif;
+      font-weight: 500;
+    }
+
+    h2 {
+      font-family: 'Open Sans', sans-serif;
+      font-weight: 500;
+    }
+
+
 	
 	.disclaimerbox {
 		background-color: #eee;		
@@ -110,9 +132,10 @@
 	
 	hr
 	{
+        border-color: lightgray;
 		border: 0;
 		height: 1px;
-		background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+		background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0));
 	}
 </style>
 
@@ -136,11 +159,14 @@
 </head>
 
 <body>
+
+
+    
 	<br>
 	<center>
-		<span style="font-size:36px">Creative and Descriptive Paper Title</span>
+		<span><h1><span class="handwritten">SKED: Sketch-guided Text-based 3D Editing</h1></span></span>
 		<table align=center width=600px>
-			<table align=center width=600px>
+			<!-- <table align=center width=600px>
 				<tr>
 					<td align=center width=100px>
 						<center>
@@ -158,8 +184,8 @@
 						</center>
 					</td>
 				</tr>
-			</table>
-			<table align=center width=250px>
+			</table> -->
+			<!-- <table align=center width=250px>
 				<tr>
 					<td align=center width=120px>
 						<center>
@@ -172,24 +198,17 @@
 						</center>
 					</td>
 				</tr>
-			</table>
+			</table> -->
 		</table>
 	</center>
-
+    <br><br>
 	<center>
 		<table align=center width=850px>
 			<tr>
 				<td width=260px>
 					<center>
-						<img class="round" style="width:500px" src="./resources/teaser.png"/>
+						<img class="round" style="width:800px" src="./resources/teaser.png"/>
 					</center>
-				</td>
-			</tr>
-		</table>
-		<table align=center width=850px>
-			<tr>
-				<td>
-					This was a template originally made for <a href="http://richzhang.github.io/colorization/">Colorful Image Colorization</a>. The code can be found in this <a href="https://github.com/richzhang/webpage-template">repository</a>.
 				</td>
 			</tr>
 		</table>
@@ -198,33 +217,22 @@
 	<hr>
 
 	<table align=center width=850px>
-		<center><h1>Abstract</h1></center>
+		<center><h2>Abstract</h2></center>
 		<tr>
 			<td>
-				This is my abstract.
+                Text-to-image diffusion models are gradually introduced into computer graphics, recently enabling the development of Text-to-3D pipelines in an open domain. However, for interactive editing purposes, local manipulations of content through a simplistic textual interface can be arduous. Incorporating user guided sketches with Text-to-image pipelines offers users more intuitive control. 
+                Still, as state-of-the-art Text-to-3D pipelines rely on optimizing Neural Radiance Fields (NeRF) through gradients from arbitrary rendering views, conditioning on sketches is not straightforward. In this paper, we present SKED, a technique for editing 3D shapes represented by NeRFs. Our technique utilizes as few as two guiding sketches from different views to alter an existing neural field. The edited region respects the prompt semantics through a pre-trained diffusion model. To ensure the generated output adheres to the provided sketches, we propose novel loss functions to generate the desired edits while preserving the density and radiance of the base instance. We demonstrate the effectiveness of our proposed method through several qualitative and quantitative experiments.
 			</td>
 		</tr>
 	</table>
 	<br>
 
 	<hr>
-	<center><h1>Talk</h1></center>
-	<p align="center">
-		<iframe width="660" height="395" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen align="center"></iframe>
-	</p>
+    <center><h2>Results</h2></center>
+    <center><img src="./resources/output.gif" alt="Results" width="800px"></center>
 
-	<table align=center width=800px>
-		<br>
-		<tr>
-			<center>
-				<span style="font-size:28px"><a href=''>[Slides]</a>
-				</span>
-			</center>
-		</tr>
-	</table>
-	<hr>
-
-	<center><h1>Code</h1></center>
+    <hr>
+	<center><h2>Method</h2></center>
 
 	<table align=center width=420px>
 		<center>
@@ -238,7 +246,7 @@
 		<tr>
 			<td align=center width=400px>
 				<center>
-					<td><img class="round" style="width:450px" src="./resources/method_diagram.png"/></td>
+					<td><img class="round" style="width:800px" src="./resources/method_diagram.png"/></td>
 				</center>
 			</td>
 		</tr>
@@ -247,27 +255,48 @@
 		<center>
 			<tr>
 				<td>
-					Short description if wanted
+                    <div id="markdown-container"></div>
+                        <!-- <p>An overview of SKED. We render the base NeRF model <i>&#x1D7D9;<sub>base</sub></i> from at least two views and sketch over them (<i>C<sub>i</sub></i>). The input to the editing algorithm is these sketches preprocessed to masks (<i>M<sub>i</sub></i>) and a text prompt. In each iteration similar to DreamFusion [<a href="#ref1">1</a>], we render a random view and apply the Score Distillation Loss to semantically align with the text prompt. Additionally, we compute <i>&#x1D7A1;<sub>pres</sub></i> to preserve the base NeRF by constraining <i>&#x1D7D9;<sub>edited</sub></i>'s density and color output to be similar to <i>&#x1D7D9;<sub>base</sub></i> away from the sketch regions. Finally, we use the object mask renderings of the sketch views to define <i>&#x1D7A1;<sub>sil</sub></i>. This loss ensures that the object mask occupies the sketch regions.</p> -->
 				</td>
 			</tr>
 		</center>
 	</table>
-	<table align=center width=800px>
+	<!-- <table align=center width=800px>
 		<br>
 		<tr><center>
 			<span style="font-size:28px">&nbsp;<a href='https://github.com/richzhang/webpage-template'>[GitHub]</a>
 			</center>
 		</span>
-	</table>
+	</table> -->
 	<br>
 	<hr>
+
+	<center><h2>Presentation</h2></center>
+	    <p align="center">
+            <video width="800" height="450" controls>
+              <source src="https://www.dropbox.com/s/n6mol28dr2as72k/SKED.mp4?raw=1" type="video/mp4">
+              Your browser does not support the video tag.
+            </video>
+        </p>
+
+	<table align=center width=800px>
+		<br>
+		<!-- <tr>
+			<center>
+				<span style="font-size:28px"><a href=''>[Slides]</a>
+				</span>
+			</center>
+		</tr> -->
+	</table>
+	<hr>
+
+
 	<table align=center width=450px>
-		<center><h1>Paper and Supplementary Material</h1></center>
+		<center><h2>Paper and Supplementary Material</h2></center>
 		<tr>
 			<td><a href=""><img class="layered-paper-big" style="height:175px" src="./resources/paper.png"/></a></td>
-			<td><span style="font-size:14pt">F. Author, S. Author, T. Author.<br>
-				<b>Creative and Descriptive Paper Title.</b><br>
-				In Conference, 20XX.<br>
+			<td><span style="font-size:14pt"><br>
+				<b>SKED: Sketch-guided Text-based 3D Editing</b><br>
 				(hosted on <a href="">ArXiv</a>)<br>
 				<!-- (<a href="./resources/camera-ready.pdf">camera ready</a>)<br> -->
 				<span style="font-size:4pt"><a href=""><br></a>
@@ -276,7 +305,6 @@
 		</tr>
 	</table>
 	<br>
-
 	<table align=center width=600px>
 		<tr>
 			<td><span style="font-size:14pt"><center>
@@ -285,21 +313,47 @@
 		</tr>
 	</table>
 
-	<hr>
 	<br>
-
-	<table align=center width=900px>
+    
+	<!-- <table align=center width=900px>
 		<tr>
 			<td width=400px>
 				<left>
-					<center><h1>Acknowledgements</h1></center>
+					<center><h2>Acknowledgements</h2></center>
 					This template was originally made by <a href="http://web.mit.edu/phillipi/">Phillip Isola</a> and <a href="http://richzhang.github.io/">Richard Zhang</a> for a <a href="http://richzhang.github.io/colorization/">colorful</a> ECCV project; the code can be found <a href="https://github.com/richzhang/webpage-template">here</a>.
 				</left>
 			</td>
 		</tr>
-	</table>
+	</table> -->
 
 <br>
+
+
+
+
+<!-- <script>
+document.addEventListener("DOMContentLoaded", function(event) {
+  var md = window.markdownit({
+    html: true,
+    linkify: true,
+    typographer: true
+  }).use(window.markdownitMathjax());
+
+  var markdownContent = `
+An overview of SKED. We render the base NeRF model 𝑥base from at least two views and sketch over them (Ci). The input to the editing algorithm is these sketches preprocessed to masks (Mi) and a text prompt. In each iteration similar to DreamFusion [1], we render a random view and apply the Score Distillation Loss to semantically align with the text prompt. Additionally, we compute 𝒍pres to preserve the base NeRF by constraining 𝑥edited's density and color output to be similar to 𝑥base away from the sketch regions. Finally, we use the object mask renderings of the sketch views to define 𝒍sil. This loss ensures that the object mask occupies the sketch regions.
+  `;
+
+  var result = md.render(markdownContent);
+  document.getElementById("markdown-container").innerHTML = result;
+});
+
+</script> -->
+
+
+
 </body>
+
+
+
 </html>
 
