--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
         width: 1100px;
     }
 
+    .paper-link, .github-link {
+        color: #0078C0;
+        text-decoration: none;
+        font-weight: bold;
+        font-size: 24px;
+    }
+
+
     .handwritten {
       font-family: 'Indie Flower', cursive;
       font-weight: 200;
@@ -72,11 +80,11 @@
 	
 	a:link,a:visited
 	{
-		color: #1367a7;
+		color: #40A0F0;
 		text-decoration: none;
 	}
 	a:hover {
-		color: #208799;
+		color: #0078c0;
 	}
 	
 	td.dl-link {
@@ -185,20 +193,20 @@
 					</td>
 				</tr>
 			</table> -->
-			<!-- <table align=center width=250px>
-				<tr>
-					<td align=center width=120px>
-						<center>
-							<span style="font-size:24px"><a href=''>[Paper]</a></span>
-						</center>
-					</td>
-					<td align=center width=120px>
-						<center>
-							<span style="font-size:24px"><a href='https://github.com/richzhang/webpage-template'>[GitHub]</a></span><br>
-						</center>
-					</td>
-				</tr>
-			</table> -->
+            <table align=center width=250px>
+                <tr>
+                  <td align=center width=120px>
+                    <center>
+                      <a href='' class="paper-link">[Paper]</a>
+                    </center>
+                  </td>
+                  <td align=center width=120px>
+                    <center>
+                      <a href='' class="github-link">[GitHub]</a>
+                    </center>
+                  </td>
+                </tr>
+              </table>
 		</table>
 	</center>
     <br><br>
