--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <style type="text/css">
     body {
+        background-color: rgb(252, 252, 255);
         font-family: "Open Sans", sans-serif;
         font-weight: 300;
         font-size: 18px;
