--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                 <tr>
                   <td align=center width=120px>
                     <center>
-                      <a href='' class="paper-link">[Paper]</a>
+                      <a href='https://arxiv.org/abs/2303.10735v1' class="paper-link">[Paper]</a>
                     </center>
                   </td>
                   <td align=center width=120px>
@@ -306,7 +306,7 @@
 			<td><a href=""><img class="layered-paper-big" style="height:175px" src="./resources/paper.png"/></a></td>
 			<td><span style="font-size:14pt"><br>
 				<b>SKED: Sketch-guided Text-based 3D Editing</b><br>
-				(hosted on <a href="">ArXiv</a>)<br>
+				(hosted on <a href="https://arxiv.org/abs/2303.10735v1">ArXiv</a>)<br>
 				<!-- (<a href="./resources/camera-ready.pdf">camera ready</a>)<br> -->
 				<span style="font-size:4pt"><a href=""><br></a>
 				</span>
