--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 
 	<hr>
     <center><h2>Results</h2></center>
-    <center><img src="./resources/output.gif" alt="Results" width="800px"></center>
+    <center><img src="./resources/r1.gif" alt="Results" width="800px"></center>
 
     <hr>
 	<center><h2>Method</h2></center>
