--- a/index.html
+++ b/index.html
@@ -2,16 +2,20 @@
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
 
 <script src="https://unpkg.com/markdown-it/dist/markdown-it.min.js"></script>
 <script src="https://unpkg.com/markdown-it-mathjax/dist/markdown-it-mathjax.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/3.2.0/es5/tex-mml-chtml.js" id="MathJax-script" async></script>
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
 
 <script src="http://www.google.com/jsapi" type="text/javascript"></script> 
 <script type="text/javascript">google.load("jquery", "1.3.2");</script>
 
 <style type="text/css">
+
     body {
         background-color: rgb(252, 252, 255);
         font-family: "Open Sans", sans-serif;
@@ -20,6 +24,47 @@
         margin-left: auto;
         margin-right: auto;
         width: 1100px;
+    }
+
+    #image-slider {
+            text-align: center;
+        }
+
+    #image-slider img {
+        width: 800px;
+    }
+
+    #image-slider button {
+        background-color: #20A0F0;
+        border: none;
+        color: white;
+        padding: 15px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        margin: 4px 2px;
+        cursor: pointer;
+        transition-duration: 0.4s;
+        border-radius: 50%;  /* make the button circular */
+    }
+
+    #image-slider button:hover {
+        background-color: white;
+        color: #20A0F0;
+    }
+
+    .circle {
+        height: 15px;
+        width: 15px;
+        background-color: #bbb;
+        border-radius: 50%;
+        display: inline-block;
+        margin: 1px;
+    }
+
+    .selected {
+        background-color: #20A0F0;
     }
 
     .paper-link, .github-link {
@@ -36,15 +81,14 @@
     }
 
     h1 {
-      font-family: 'Open Sans', sans-serif;
+      font-family: 'Montserrat', sans-serif;
       font-weight: 500;
     }
 
     h2 {
-      font-family: 'Open Sans', sans-serif;
+      font-family: 'Montserrat', sans-serif;
       font-weight: 500;
     }
-
 
 	
 	.disclaimerbox {
@@ -198,7 +242,7 @@
                 <tr>
                   <td align=center width=120px>
                     <center>
-                      <a href='https://arxiv.org/abs/2303.10735v1' class="paper-link">[Paper]</a>
+                      <a href='https://arxiv.org/abs/2303.10735v2' class="paper-link">[Paper]</a>
                     </center>
                   </td>
                   <td align=center width=120px>
@@ -223,7 +267,7 @@
 		</table>
 	</center>
 
-	<hr>
+	<!-- <hr> -->
 
 	<table align=center width=850px>
 		<center><h2>Abstract</h2></center>
@@ -236,11 +280,22 @@
 	</table>
 	<br>
 
-	<hr>
+	<!-- <hr> -->
     <center><h2>Results</h2></center>
-    <center><img src="./resources/r1.gif" alt="Results" width="800px"></center>
+    <!-- <center><img src="./resources/r1.gif" alt="Results" width="800px"></center> -->
+    <div id="image-slider">
+        <button id="previous-button" onclick="changeImage(-1)">
+            <i class="fas fa-arrow-left"></i>
+        </button>
+        <img id="slider-image" src="./resources/r1.gif" alt="Results">
+        <button id="next-button" onclick="changeImage(1)">
+            <i class="fas fa-arrow-right"></i>
+        </button>
+        <div id="circle-container"></div>
+    </div>
 
-    <hr>
+
+    <!-- <hr> -->
 	<center><h2>Method</h2></center>
 
 	<table align=center width=420px>
@@ -278,7 +333,7 @@
 		</span>
 	</table> -->
 	<br>
-	<hr>
+	<!-- <hr> -->
 
 	<center><h2>Presentation</h2></center>
 	    <p align="center">
@@ -297,7 +352,7 @@
 			</center>
 		</tr> -->
 	</table>
-	<hr>
+	<!-- <hr> -->
 
 
 	<table align=center width=450px>
@@ -306,7 +361,7 @@
 			<td><a href=""><img class="layered-paper-big" style="height:175px" src="./resources/paper.png"/></a></td>
 			<td><span style="font-size:14pt"><br>
 				<b>SKED: Sketch-guided Text-based 3D Editing</b><br>
-				(hosted on <a href="https://arxiv.org/abs/2303.10735v1">ArXiv</a>)<br>
+				(hosted on <a href="https://arxiv.org/abs/2303.10735v2">ArXiv</a>)<br>
 				<!-- (<a href="./resources/camera-ready.pdf">camera ready</a>)<br> -->
 				<span style="font-size:4pt"><a href=""><br></a>
 				</span>
@@ -357,6 +412,43 @@ An overview of SKED. We render the base NeRF model 𝑥base from at least two vi
 });
 
 </script> -->
+
+<script>
+    var currentImageIndex = 1;
+    var numOfImages = 8;
+
+    window.onload = function() {
+        var container = document.getElementById('circle-container');
+        for (var i = 1; i <= numOfImages; i++) {
+            var circle = document.createElement('div');
+            circle.className = 'circle';
+            circle.id = 'circle-' + i;
+            container.appendChild(circle);
+        }
+        updateCircles();
+    }
+
+    function updateCircles() {
+        for (var i = 1; i <= numOfImages; i++) {
+            var circle = document.getElementById('circle-' + i);
+            circle.className = 'circle';
+            if (i == currentImageIndex) {
+                circle.classList.add('selected');
+            }
+        }
+    }
+
+    function changeImage(direction) {
+        currentImageIndex += direction;
+        if (currentImageIndex < 1) {
+            currentImageIndex = numOfImages;
+        } else if (currentImageIndex > numOfImages) {
+            currentImageIndex = 1;
+        }
+        document.getElementById('slider-image').src = "./resources/r" + currentImageIndex + ".gif";
+        updateCircles();
+    }
+</script>
 
 
 
