--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lato:wght@400;500&display=swap">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;500;600;700&display=swap">
 
 <script src="https://unpkg.com/markdown-it/dist/markdown-it.min.js"></script>
 <script src="https://unpkg.com/markdown-it-mathjax/dist/markdown-it-mathjax.min.js"></script>
@@ -17,13 +20,13 @@
 <style type="text/css">
 
     body {
-        background-color: rgb(252, 252, 255);
-        font-family: "Open Sans", sans-serif;
-        font-weight: 300;
-        font-size: 18px;
+        background-color: rgb(255, 255, 255);
+        font-family: 'Open Sans', sans-serif;
+        font-weight: 100;
+        font-size: 32px;
         margin-left: auto;
         margin-right: auto;
-        width: 1100px;
+        width: 1200px;
     }
 
     #image-slider {
@@ -80,13 +83,23 @@
       font-weight: 200;
     }
 
+    /* h1 {
+      font-family: 'Open Sans', sans-serif;
+      font-weight: 600;
+    }
+
+    h2 {
+      font-family: 'Open Sans', sans-serif;
+      font-weight: 600;
+    } */
+
     h1 {
-      font-family: 'Montserrat', sans-serif;
+      font-family: 'Lato', sans-serif;
       font-weight: 500;
     }
 
     h2 {
-      font-family: 'Montserrat', sans-serif;
+      font-family: 'Lato', sans-serif;
       font-weight: 500;
     }
 
