--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                   </td>
                   <td align=center width=120px>
                     <center>
-                      <a href='' class="github-link">[GitHub]</a>
+                      <a href='' class="github-link">[Code (coming soon)]</a>
                     </center>
                   </td>
                 </tr>
