--- a/index.html
+++ b/index.html
@@ -249,6 +249,37 @@
 		height: 1px;
 		background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0));
 	}
+	.hand-drawn-line {
+		position: relative;
+		width: 100%;
+		height: 2px;
+		background-color: #000; /* Change the color as needed */
+		background-image: linear-gradient(to right, transparent 100%, rgba(0, 0, 0, 0.8) 50%);
+		background-position: 0 0;
+		background-repeat: repeat-x;
+		animation: pencilDraw 1s linear infinite;
+	}
+
+	@keyframes pencilDraw {
+		to {
+			background-position: 100% 0;
+		}
+	}
+	.project-header a{
+		color: black;
+	}
+	.project-header a:hover{
+		color: #0078c0;
+	}
+	.iccv-title {
+		text-align: center;
+		font-family: 'Indie Flower', cursive; /* Replace 'Your Friendly Font' with the actual font name */
+		color: #b8860b;
+	}
+
+
+
+
 </style>
 
 <html>
@@ -277,32 +308,65 @@
 	<br>
 	<center>
 		<span><h1><span class="handwritten">SKED: Sketch-guided Text-based 3D Editing</h1></span></span>
-		<table align=center width=600px>
-			<!-- <table align=center width=600px>
+
+		<table align=center width=900px class="project-header">
 				<tr>
-					<td align=center width=100px>
+					<td align=center width=180px>
 						<center>
-							<span style="font-size:24px"><a href="https://en.wikipedia.org/wiki/James_J._Gibson">First Author</a></span>
+							<span class="handwritten", style="font-size: 24px"><a href="https://aryanmikaeili.github.io/">Aryan <sup>1</sup> <br> Mikaeili</a></span>
 						</center>
 					</td>
-					<td align=center width=100px>
+					<td align=center width=160px>
 						<center>
-							<span style="font-size:24px"><a href="https://en.wikipedia.org/wiki/James_J._Gibson">Second Author</a></span>
+							<span class="handwritten", style="font-size: 24px"><a href="https://orperel.github.io/">Or <sup>2</sup><br>Perel</a></span>
 						</center>
 					</td>
-					<td align=center width=100px>
+					<td align=center width=160px>
 						<center>
-							<span style="font-size:24px"><a href="https://en.wikipedia.org/wiki/James_J._Gibson">Third Author</a></span>
+							<span class="handwritten", style="font-size: 24px"><a href="https://mehdi0xc.github.io/">Mehdi <sup>1</sup><br> Safaee</a></span>
+						</center>
+					</td>
+					<td align=center width=160px>
+						<center>
+							<span class="handwritten", style="font-size: 24px"><a href="https://danielcohenor.com/">Daniel <sup>3</sup> <br> Cohen-Or</a></span>
+						</center>
+					</td>
+					<td align=center width=160px>
+						<center>
+							<span class="handwritten", style="font-size: 24px"><a href="https://www.sfu.ca/~amahdavi/Home.html">Ali <sup>1</sup><br> Mahdavi-Amiri</a></span>
 						</center>
 					</td>
 				</tr>
-                </table> -->
-                <table align=center width=640px>
+                </table>
+
+			<table align=center width=450px class="project-header" style="margin-top: 2%">
+				<tr>
+					<td align=center width=150px>
+						<center>
+							<span class="handwritten", style="font-size: 20px"><sup>1</sup> Simon Fraser University</span>
+						</center>
+					</td>
+					<td align=center width=150px>
+						<center>
+							<span class="handwritten", style="font-size: 20px"><sup>2</sup> Nvidia</span>
+						</center>
+					</td>
+					<td align=center width=150px>
+						<center>
+							<span class="handwritten", style="font-size: 20px"><sup>3</sup> Tel Aviv University</span>
+						</center>
+					</td>
+
+				</tr>
+			</table>
+
+				<h3 class="iccv-title">ICCV 2023</h3>
+                <table align=center width=640px style="margin-top: 2%">
                     <tr>
                         <td align=center width=640px>
                             <center>
                             <div class="rectangle">
-                                <a href='https://arxiv.org/abs/2303.10735v2' class="github-link">Paper</a>
+                                <a href='https://arxiv.org/abs/2303.10735v3' class="github-link">Paper</a>
                             </div>
                             </center>
                         </td>
@@ -315,7 +379,7 @@
                         </td>
                     </tr>
                 </table>
-                </table>
+
 	</center>
     <br><br>
 	<center>
