change colors of some elements

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     }
 
     #image-slider button {
-        background-color: #20A0F0;
+        background-color: #0078c0;
         border: none;
         color: white;
         padding: 15px;
@@ -54,7 +54,7 @@
 
     #image-slider button:hover {
         background-color: white;
-        color: #20A0F0;
+        color: #0078c0;
     }
 
     .circle {
@@ -67,7 +67,7 @@
     }
 
     .selected {
-        background-color: #20A0F0;
+        background-color: #0078c0;
     }
 
     /* .paper-link {
@@ -79,7 +79,7 @@
 
     .rectangle {
     display: inline-block;
-    border: 2px solid #20A0F0;
+    border: 2px solid #0078c0;
     border-radius: 10px;
     padding: 20px;
     position: relative;
@@ -87,7 +87,7 @@
 }
 
 .rectangle a {
-    color: #20A0F0;
+    color: #0078c0;
     text-decoration: none;
     font-size: 20px;
     position: relative; /* Add this line */
@@ -96,7 +96,7 @@
 
 .rectangle:hover {
     border: 2px solid white;
-    background: #20A0F0;
+    background: #0078c0;
 }
 
 .rectangle:hover a {
@@ -115,7 +115,7 @@
 }
 
 .rectangle .github-link {
-    color: #20A0F0;
+    color: #0078c0;
     text-decoration: none;
     font-weight: bold;
     font-size: 24px;
@@ -184,7 +184,7 @@
 	
 	a:link,a:visited
 	{
-		color: #40A0F0;
+		color: #0078c0;
 		text-decoration: none;
 	}
 	a:hover {
@@ -274,7 +274,7 @@
 	.iccv-title {
 		text-align: center;
 		font-family: 'Indie Flower', cursive; /* Replace 'Your Friendly Font' with the actual font name */
-		color: #b8860b;
+		color: #0078c0;
 	}
 
 
@@ -313,27 +313,27 @@
 				<tr>
 					<td align=center width=180px>
 						<center>
-							<span class="handwritten", style="font-size: 24px"><a href="https://aryanmikaeili.github.io/">Aryan <sup>1</sup> <br> Mikaeili</a></span>
+							<span class="handwritten", style="font-size: 32px"><a href="https://aryanmikaeili.github.io/">Aryan <sup>1</sup> <br> Mikaeili</a></span>
 						</center>
 					</td>
 					<td align=center width=160px>
 						<center>
-							<span class="handwritten", style="font-size: 24px"><a href="https://orperel.github.io/">Or <sup>2</sup><br>Perel</a></span>
+							<span class="handwritten", style="font-size: 32px"><a href="https://orperel.github.io/">Or <sup>2</sup><br>Perel</a></span>
 						</center>
 					</td>
 					<td align=center width=160px>
 						<center>
-							<span class="handwritten", style="font-size: 24px"><a href="https://mehdi0xc.github.io/">Mehdi <sup>1</sup><br> Safaee</a></span>
+							<span class="handwritten", style="font-size: 32px"><a href="https://mehdi0xc.github.io/">Mehdi <sup>1</sup><br> Safaee</a></span>
 						</center>
 					</td>
 					<td align=center width=160px>
 						<center>
-							<span class="handwritten", style="font-size: 24px"><a href="https://danielcohenor.com/">Daniel <sup>3</sup> <br> Cohen-Or</a></span>
+							<span class="handwritten", style="font-size: 32px"><a href="https://danielcohenor.com/">Daniel <sup>3</sup> <br> Cohen-Or</a></span>
 						</center>
 					</td>
-					<td align=center width=160px>
+					<td align=center width=180px>
 						<center>
-							<span class="handwritten", style="font-size: 24px"><a href="https://www.sfu.ca/~amahdavi/Home.html">Ali <sup>1</sup><br> Mahdavi-Amiri</a></span>
+							<span class="handwritten", style="font-size: 32px"><a href="https://www.sfu.ca/~amahdavi/Home.html">Ali <sup>1</sup><br> Mahdavi-Amiri</a></span>
 						</center>
 					</td>
 				</tr>
@@ -343,24 +343,24 @@
 				<tr>
 					<td align=center width=150px>
 						<center>
-							<span class="handwritten", style="font-size: 20px"><sup>1</sup> Simon Fraser University</span>
+							<span class="handwritten", style="font-size: 22px"><sup>1</sup> Simon Fraser University</span>
 						</center>
 					</td>
 					<td align=center width=150px>
 						<center>
-							<span class="handwritten", style="font-size: 20px"><sup>2</sup> Nvidia</span>
+							<span class="handwritten", style="font-size: 22px"><sup>2</sup> Nvidia</span>
 						</center>
 					</td>
 					<td align=center width=150px>
 						<center>
-							<span class="handwritten", style="font-size: 20px"><sup>3</sup> Tel Aviv University</span>
+							<span class="handwritten", style="font-size: 22px"><sup>3</sup> Tel Aviv University</span>
 						</center>
 					</td>
 
 				</tr>
 			</table>
 
-				<h3 class="iccv-title">ICCV 2023</h3>
+				<h4 class="iccv-title">ICCV 2023</h4>
                 <table align=center width=640px style="margin-top: 2%">
                     <tr>
                         <td align=center width=640px>
