--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
                         <td align=center width=640px>
                             <center>
                                 <div class="rectangle">
-                                    <a href='' class="github-link">Code (coming soon!)</a>
+                                    <a href='https://github.com/aryanmikaeili/SKED' class="github-link">Code</a>
                                 </div>
                             </center>
                         </td>
